# hdf5-reader-rs

./: Cargo.toml  TODO.md
src/: checksum.rs  chunk.rs  dataspace.rs  datatype.rs  file.rs  global_heap.rs  layout.rs  lib.rs
src/btree2/: btree2_type.rs  header.rs  iterate.rs  mod.rs  parse_records.rs  record.rs
src/chunk/: btree_v1.rs  btree_v2.rs  entry.rs  extensible_array.rs  fixed_array.rs  helpers.rs  implicit.rs  mod.rs  read_chunked.rs  read_chunked_slice.rs  single_chunk.rs  tests.rs
src/datatype/: constructors.rs  members.rs  mod.rs  parse.rs  primitives.rs  tests.rs  types.rs
src/file/: attribute.rs  dataset.rs  fill_value.rs  group.rs  hdf5_file.rs  helpers.rs  mod.rs  node.rs
src/filters/: deflate.rs  fletcher32.rs  lzf.rs  mod.rs  nbit.rs  scaleoffset.rs  shuffle.rs
src/fractal_heap/: header.rs  mod.rs  read_managed_object.rs  tests.rs
src/writer/: chunk_index.rs  chunk_util.rs  dataset_node.rs  dense_attrs.rs  encode.rs  file_writer.rs  gcol.rs  group_node.rs  mod.rs  serialize.rs  serialize_compat.rs  tests.rs  types.rs  write_filters.rs
tests/: read_fixtures.rs  roundtrip.rs
tests/fixtures/: array.h5  big_endian.h5  btree_v2_chunks.h5  btree_v2_deep.h5  btree_v2_filtered.h5  chunked_btree_v1.h5  chunked_deflate_v3.h5  committed_datatype.h5  compact_v2.h5  complex.h5  compound.h5  creation_order.h5  dense_attributes.h5  ea_large.h5  edge_chunks.h5  empty_chunked.h5  enum.h5  extensible_array.h5  fill_value.h5  filtered_fheap.h5  fletcher32.h5  gen_fixtures  gen_fixtures.c  implicit_chunks.h5  lzf.h5  lzf_c.h5  nbit.h5  nested_groups_v2.h5  (+7 more)
